SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -110,6 +110,9 @@ Comment[zh_TW]=KOrganizer 顏色與字型設定
 X-KDE-Keywords=korganizer,colors,fonts
 X-KDE-Keywords[hu]=korganizer,színek,betűtípusok
 X-KDE-Keywords[ia]=korganizer,colores,fonts
+X-KDE-Keywords[nl]=korganizer,kleuren,lettertypen
+X-KDE-Keywords[pt]=korganizer,cores,tipos de letra
 X-KDE-Keywords[pt_BR]=korganizer,cores,fontes
+X-KDE-Keywords[sv]=korganizer,färger,teckensnitt
 X-KDE-Keywords[uk]=korganizer,colors,fonts,кольори,колір,шрифт,шрифти
 X-KDE-Keywords[x-test]=xxkorganizer,colors,fontsxx
