--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -143,6 +143,10 @@ Comment[zh_CN]=配置定制页
 Comment[zh_TW]=設定 Custom Pages
 X-KDE-Keywords=korganizer, configure, settings, custom fields
 X-KDE-Keywords[hu]=korganizer, beállítás, beállítások, egyéni mezők
+X-KDE-Keywords[ia]=korganizer, configura, preferentias, campos personalisate
+X-KDE-Keywords[nl]=korganizer, instellen, instellingen, eigen velden
+X-KDE-Keywords[pt]=korganizer, configurar, configuração, campos personalizados
 X-KDE-Keywords[pt_BR]=korganizer,configurar,configurações,campos personalizados
+X-KDE-Keywords[sv]=korganizer, anpassa, inställningar, egna fält
 X-KDE-Keywords[uk]=korganizer,configure,settings,custom fields,налаштування,параметри,параметр,нетиповий,поле,нетипові,поля
 X-KDE-Keywords[x-test]=xxkorganizer, configure, settings, custom fieldsxx
