--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -140,5 +140,10 @@ Comment[zh_CN]=KOrganizer 空闲/忙碌配置
 Comment[zh_TW]=KOrganizer 行程資訊設定
 X-KDE-Keywords=korganizer,freebusy,scheduling
 X-KDE-Keywords[hu]=korganizer,szabadelfoglalt,ütemezés
+X-KDE-Keywords[ia]=korganizer,libereoccupate,planification
+X-KDE-Keywords[nl]=korganizer,vrijbezet,plannen
+X-KDE-Keywords[pt]=korganizer,livre-ocupado,agendamento
+X-KDE-Keywords[pt_BR]=korganizer,livre-ocupado,agendamento
+X-KDE-Keywords[sv]=korganizer,ledig-upptagen,schemaläggning
 X-KDE-Keywords[uk]=korganizer,freebusy,scheduling,вільний,зайнятий,план,планування
 X-KDE-Keywords[x-test]=xxkorganizer,freebusy,schedulingxx
