--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -138,6 +138,9 @@ Comment[zh_TW]=KOrganizer 群組排程設定
 X-KDE-Keywords=korganizer,group,scheduling
 X-KDE-Keywords[hu]=korganizer,csoport,ütemezés
 X-KDE-Keywords[ia]=korganizer, gruppo,  planification
+X-KDE-Keywords[nl]=korganizer,groep,plannen
+X-KDE-Keywords[pt]=korganizer,agendamento,escalonamento,grupo
+X-KDE-Keywords[pt_BR]=korganizer,agendamento,escalonamento,grupo
 X-KDE-Keywords[sv]=korganizer,grupp,schemaläggning
 X-KDE-Keywords[uk]=korganizer,group,scheduling,група,планування,групи
 X-KDE-Keywords[x-test]=xxkorganizer,group,schedulingxx
