--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -148,8 +148,11 @@ Comment[x-test]=xxKOrganizer Main Configurationxx
 Comment[zh_CN]=KOrganizer 主要配置
 Comment[zh_TW]=KOrganizer 主設定
 X-KDE-Keywords=korganizer,main
+X-KDE-Keywords[cs]=korganizer,hlavní
 X-KDE-Keywords[hu]=korganizer,alap
 X-KDE-Keywords[ia]=korganizer, principal
+X-KDE-Keywords[nl]=korganizer,hoofdpagina
+X-KDE-Keywords[pt]=korganizer,principal
 X-KDE-Keywords[pt_BR]=korganizer,principal
 X-KDE-Keywords[sv]=korganizer,huvudinställning
 X-KDE-Keywords[uk]=korganizer,main,основа,основна,головна,головний
