--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -144,6 +144,10 @@ Comment[zh_CN]=KOrganizer 插件配置
 Comment[zh_TW]=KOrganizer外掛程式設定
 X-KDE-Keywords=korganizer,plugin,module
 X-KDE-Keywords[hu]=korganizer,bővítmény,modul
+X-KDE-Keywords[ia]=korganizer,plugin,modulo
+X-KDE-Keywords[nl]=korganizer,plug-in,module
+X-KDE-Keywords[pt]=korganizer,'plugin',módulo
 X-KDE-Keywords[pt_BR]=korganizer,plug-in,módulo
+X-KDE-Keywords[sv]=korganizer,insticksprogram,modul
 X-KDE-Keywords[uk]=korganizer,plugin,module,додаток,додатки,модуль,модулі
 X-KDE-Keywords[x-test]=xxkorganizer,plugin,modulexx
