--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -112,8 +112,11 @@ Comment[x-test]=xxKOrganizer Time and Date Configurationxx
 Comment[zh_CN]=KOrganizer 时间和日期配置
 Comment[zh_TW]=KOrganizer 時間與日期設定
 X-KDE-Keywords=korganizer,time
+X-KDE-Keywords[cs]=korganizer,čas
 X-KDE-Keywords[hu]=korganizer,idő
 X-KDE-Keywords[ia]=korganizer,tempore
+X-KDE-Keywords[nl]=korganizer,tijd
+X-KDE-Keywords[pt]=korganizer,hora
 X-KDE-Keywords[pt_BR]=korganizer,tempo
 X-KDE-Keywords[sv]=korganizer,tid
 X-KDE-Keywords[uk]=korganizer,time,час
