SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -142,8 +142,10 @@ Comment[x-test]=xxConfigure the Custom Pagesxx
 Comment[zh_CN]=配置定制页
 Comment[zh_TW]=設定 Custom Pages
 X-KDE-Keywords=korganizer, configure, settings, custom fields
+X-KDE-Keywords[es]=korganizer, configurar, preferencias, campos personalizados
 X-KDE-Keywords[hu]=korganizer, beállítás, beállítások, egyéni mezők
 X-KDE-Keywords[ia]=korganizer, configura, preferentias, campos personalisate
+X-KDE-Keywords[kk]=korganizer, configure, settings, custom fields
 X-KDE-Keywords[nl]=korganizer, instellen, instellingen, eigen velden
 X-KDE-Keywords[pt]=korganizer, configurar, configuração, campos personalizados
 X-KDE-Keywords[pt_BR]=korganizer,configurar,configurações,campos personalizados
