--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -139,8 +139,10 @@ Comment[x-test]=xxKOrganizer Free/Busy Configurationxx
 Comment[zh_CN]=KOrganizer 空闲/忙碌配置
 Comment[zh_TW]=KOrganizer 行程資訊設定
 X-KDE-Keywords=korganizer,freebusy,scheduling
+X-KDE-Keywords[es]=korganizer, disponibilidad, agenda
 X-KDE-Keywords[hu]=korganizer,szabadelfoglalt,ütemezés
 X-KDE-Keywords[ia]=korganizer,libereoccupate,planification
+X-KDE-Keywords[kk]=korganizer,freebusy,scheduling
 X-KDE-Keywords[nl]=korganizer,vrijbezet,plannen
 X-KDE-Keywords[pt]=korganizer,livre-ocupado,agendamento
 X-KDE-Keywords[pt_BR]=korganizer,livre-ocupado,agendamento
