--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -113,8 +113,10 @@ Comment[zh_CN]=KOrganizer 时间和日期配置
 Comment[zh_TW]=KOrganizer 時間與日期設定
 X-KDE-Keywords=korganizer,time
 X-KDE-Keywords[cs]=korganizer,čas
+X-KDE-Keywords[es]=korganizer, hora
 X-KDE-Keywords[hu]=korganizer,idő
 X-KDE-Keywords[ia]=korganizer,tempore
+X-KDE-Keywords[kk]=korganizer,time
 X-KDE-Keywords[nl]=korganizer,tijd
 X-KDE-Keywords[pt]=korganizer,hora
 X-KDE-Keywords[pt_BR]=korganizer,tempo
