--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -108,8 +108,10 @@ Comment[x-test]=xxKOrganizer Colors and Fonts Configurationxx
 Comment[zh_CN]=KOrganizer 颜色和字体配置
 Comment[zh_TW]=KOrganizer 顏色與字型設定
 X-KDE-Keywords=korganizer,colors,fonts
+X-KDE-Keywords[es]=korganizer, colores, tipos de letra
 X-KDE-Keywords[hu]=korganizer,színek,betűtípusok
 X-KDE-Keywords[ia]=korganizer,colores,fonts
+X-KDE-Keywords[kk]=korganizer,colors,fonts
 X-KDE-Keywords[nl]=korganizer,kleuren,lettertypen
 X-KDE-Keywords[pt]=korganizer,cores,tipos de letra
 X-KDE-Keywords[pt_BR]=korganizer,cores,fontes
