--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -136,8 +136,10 @@ Comment[x-test]=xxKOrganizer Group Scheduling Configurationxx
 Comment[zh_CN]=Korganizer 组日程安排配置
 Comment[zh_TW]=KOrganizer 群組排程設定
 X-KDE-Keywords=korganizer,group,scheduling
+X-KDE-Keywords[es]=korganizer, grupo, agenda
 X-KDE-Keywords[hu]=korganizer,csoport,ütemezés
 X-KDE-Keywords[ia]=korganizer, gruppo,  planification
+X-KDE-Keywords[kk]=korganizer,group,scheduling
 X-KDE-Keywords[nl]=korganizer,groep,plannen
 X-KDE-Keywords[pt]=korganizer,agendamento,escalonamento,grupo
 X-KDE-Keywords[pt_BR]=korganizer,agendamento,escalonamento,grupo
