--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -149,8 +149,10 @@ Comment[zh_CN]=KOrganizer 主要配置
 Comment[zh_TW]=KOrganizer 主設定
 X-KDE-Keywords=korganizer,main
 X-KDE-Keywords[cs]=korganizer,hlavní
+X-KDE-Keywords[es]=korganizer, principal
 X-KDE-Keywords[hu]=korganizer,alap
 X-KDE-Keywords[ia]=korganizer, principal
+X-KDE-Keywords[kk]=korganizer,main
 X-KDE-Keywords[nl]=korganizer,hoofdpagina
 X-KDE-Keywords[pt]=korganizer,principal
 X-KDE-Keywords[pt_BR]=korganizer,principal
