--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -143,8 +143,10 @@ Comment[x-test]=xxKOrganizer Plugin Configurationxx
 Comment[zh_CN]=KOrganizer 插件配置
 Comment[zh_TW]=KOrganizer外掛程式設定
 X-KDE-Keywords=korganizer,plugin,module
+X-KDE-Keywords[es]=korganizer, miniaplicación, módulo
 X-KDE-Keywords[hu]=korganizer,bővítmény,modul
 X-KDE-Keywords[ia]=korganizer,plugin,modulo
+X-KDE-Keywords[kk]=korganizer,plugin,module
 X-KDE-Keywords[nl]=korganizer,plug-in,module
 X-KDE-Keywords[pt]=korganizer,'plugin',módulo
 X-KDE-Keywords[pt_BR]=korganizer,plug-in,módulo
