--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -146,8 +146,10 @@ Comment[zh_CN]=KOrganizer 视图配置
 Comment[zh_TW]=KOrganizer 檢視設定
 X-KDE-Keywords=korganizer,view
 X-KDE-Keywords[cs]=korganizer,pohled
+X-KDE-Keywords[es]=korganizer, vista
 X-KDE-Keywords[hu]=korganizer,nézet
 X-KDE-Keywords[ia]=korganizer,vista
+X-KDE-Keywords[kk]=korganizer,view
 X-KDE-Keywords[nl]=korganizer,beeld
 X-KDE-Keywords[pt]=korganizer,ver
 X-KDE-Keywords[pt_BR]=korganizer,vsualizar
