SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -118,3 +118,4 @@ X-KDE-Keywords[pt_BR]=korganizer,cores,fontes
 X-KDE-Keywords[sv]=korganizer,färger,teckensnitt
 X-KDE-Keywords[uk]=korganizer,colors,fonts,кольори,колір,шрифт,шрифти
 X-KDE-Keywords[x-test]=xxkorganizer,colors,fontsxx
+X-KDE-Keywords[zh_TW]=korganizer,colors,fonts
