--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -152,3 +152,4 @@ X-KDE-Keywords[pt_BR]=korganizer,configurar,configurações,campos personalizado
 X-KDE-Keywords[sv]=korganizer, anpassa, inställningar, egna fält
 X-KDE-Keywords[uk]=korganizer,configure,settings,custom fields,налаштування,параметри,параметр,нетиповий,поле,нетипові,поля
 X-KDE-Keywords[x-test]=xxkorganizer, configure, settings, custom fieldsxx
+X-KDE-Keywords[zh_TW]=korganizer, configure, settings, custom fields
