--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -149,3 +149,4 @@ X-KDE-Keywords[pt_BR]=korganizer,livre-ocupado,agendamento
 X-KDE-Keywords[sv]=korganizer,ledig-upptagen,schemaläggning
 X-KDE-Keywords[uk]=korganizer,freebusy,scheduling,вільний,зайнятий,план,планування
 X-KDE-Keywords[x-test]=xxkorganizer,freebusy,schedulingxx
+X-KDE-Keywords[zh_TW]=korganizer,freebusy,scheduling
