--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -159,3 +159,4 @@ X-KDE-Keywords[pt_BR]=korganizer,principal
 X-KDE-Keywords[sv]=korganizer,huvudinställning
 X-KDE-Keywords[uk]=korganizer,main,основа,основна,головна,головний
 X-KDE-Keywords[x-test]=xxkorganizer,mainxx
+X-KDE-Keywords[zh_TW]=korganizer,main
