--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -153,3 +153,4 @@ X-KDE-Keywords[pt_BR]=korganizer,plug-in,módulo
 X-KDE-Keywords[sv]=korganizer,insticksprogram,modul
 X-KDE-Keywords[uk]=korganizer,plugin,module,додаток,додатки,модуль,модулі
 X-KDE-Keywords[x-test]=xxkorganizer,plugin,modulexx
+X-KDE-Keywords[zh_TW]=korganizer,plugin,module
