--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -123,3 +123,4 @@ X-KDE-Keywords[pt_BR]=korganizer,tempo
 X-KDE-Keywords[sv]=korganizer,tid
 X-KDE-Keywords[uk]=korganizer,time,час
 X-KDE-Keywords[x-test]=xxkorganizer,timexx
+X-KDE-Keywords[zh_TW]=korganizer,time
