--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -156,3 +156,4 @@ X-KDE-Keywords[pt_BR]=korganizer,vsualizar
 X-KDE-Keywords[sv]=korganizer,vy
 X-KDE-Keywords[uk]=korganizer,view,перегляд
 X-KDE-Keywords[x-test]=xxkorganizer,viewxx
+X-KDE-Keywords[zh_TW]=korganizer,view
