--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -146,3 +146,4 @@ X-KDE-Keywords[pt_BR]=korganizer,agendamento,escalonamento,grupo
 X-KDE-Keywords[sv]=korganizer,grupp,schemaläggning
 X-KDE-Keywords[uk]=korganizer,group,scheduling,група,планування,групи
 X-KDE-Keywords[x-test]=xxkorganizer,group,schedulingxx
+X-KDE-Keywords[zh_TW]=korganizer,group,scheduling
