--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -149,6 +149,7 @@ Comment[zh_CN]=KOrganizer 主要配置
 Comment[zh_TW]=KOrganizer 主設定
 X-KDE-Keywords=korganizer,main
 X-KDE-Keywords[cs]=korganizer,hlavní
+X-KDE-Keywords[de]=KOrganizer,allgemein
 X-KDE-Keywords[es]=korganizer, principal
 X-KDE-Keywords[hu]=korganizer,alap
 X-KDE-Keywords[ia]=korganizer, principal
