--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -136,6 +136,7 @@ Comment[x-test]=xxKOrganizer Group Scheduling Configurationxx
 Comment[zh_CN]=Korganizer 组日程安排配置
 Comment[zh_TW]=KOrganizer 群組排程設定
 X-KDE-Keywords=korganizer,group,scheduling
+X-KDE-Keywords[de]=KOrganizer,Gruppe,Ablaufplanung
 X-KDE-Keywords[es]=korganizer, grupo, agenda
 X-KDE-Keywords[hu]=korganizer,csoport,ütemezés
 X-KDE-Keywords[ia]=korganizer, gruppo,  planification
