--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -143,6 +143,7 @@ Comment[x-test]=xxKOrganizer Plugin Configurationxx
 Comment[zh_CN]=KOrganizer 插件配置
 Comment[zh_TW]=KOrganizer外掛程式設定
 X-KDE-Keywords=korganizer,plugin,module
+X-KDE-Keywords[de]=KOrganizer,Modul,Modul
 X-KDE-Keywords[es]=korganizer, miniaplicación, módulo
 X-KDE-Keywords[hu]=korganizer,bővítmény,modul
 X-KDE-Keywords[ia]=korganizer,plugin,modulo
