--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -113,6 +113,7 @@ Comment[zh_CN]=KOrganizer 时间和日期配置
 Comment[zh_TW]=KOrganizer 時間與日期設定
 X-KDE-Keywords=korganizer,time
 X-KDE-Keywords[cs]=korganizer,čas
+X-KDE-Keywords[de]=KOrganizer,Zeit
 X-KDE-Keywords[es]=korganizer, hora
 X-KDE-Keywords[hu]=korganizer,idő
 X-KDE-Keywords[ia]=korganizer,tempore
