SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -110,6 +110,7 @@ Comment[zh_TW]=KOrganizer 顏色與字型設定
 X-KDE-Keywords=korganizer,colors,fonts
 X-KDE-Keywords[de]=KOrganizer,Farben,Schriftarten
 X-KDE-Keywords[es]=korganizer, colores, tipos de letra
+X-KDE-Keywords[fi]=korganizer,värit,kirjasimet,fontit
 X-KDE-Keywords[hu]=korganizer,színek,betűtípusok
 X-KDE-Keywords[ia]=korganizer,colores,fonts
 X-KDE-Keywords[kk]=korganizer,colors,fonts
