--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -141,6 +141,7 @@ Comment[zh_TW]=KOrganizer 行程資訊設定
 X-KDE-Keywords=korganizer,freebusy,scheduling
 X-KDE-Keywords[de]=KOrganizer,Frei/Beschäftigt,Frei/Belegt,Ablaufplanung
 X-KDE-Keywords[es]=korganizer, disponibilidad, agenda
+X-KDE-Keywords[fi]=korganizer,varaustiedot,vapaa/varattu,aikataulut
 X-KDE-Keywords[hu]=korganizer,szabadelfoglalt,ütemezés
 X-KDE-Keywords[ia]=korganizer,libereoccupate,planification
 X-KDE-Keywords[kk]=korganizer,freebusy,scheduling
