--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -138,6 +138,7 @@ Comment[zh_TW]=KOrganizer 群組排程設定
 X-KDE-Keywords=korganizer,group,scheduling
 X-KDE-Keywords[de]=KOrganizer,Gruppe,Ablaufplanung
 X-KDE-Keywords[es]=korganizer, grupo, agenda
+X-KDE-Keywords[fi]=korganizer,ryhmä,aikataulut
 X-KDE-Keywords[hu]=korganizer,csoport,ütemezés
 X-KDE-Keywords[ia]=korganizer, gruppo,  planification
 X-KDE-Keywords[kk]=korganizer,group,scheduling
