--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -151,6 +151,7 @@ X-KDE-Keywords=korganizer,main
 X-KDE-Keywords[cs]=korganizer,hlavní
 X-KDE-Keywords[de]=KOrganizer,allgemein
 X-KDE-Keywords[es]=korganizer, principal
+X-KDE-Keywords[fi]=korganizer,yleiset
 X-KDE-Keywords[hu]=korganizer,alap
 X-KDE-Keywords[ia]=korganizer, principal
 X-KDE-Keywords[kk]=korganizer,main
