--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -98,7 +98,7 @@ Comment[eo]=KOrganizilo-Kromaĵagordo
 Comment[es]=Configuración de los complementos de KOrganizer
 Comment[et]=KOrganizeri pluginate seadistused
 Comment[eu]=KOrganizer-en plugin konfigurazioa
-Comment[fa]=پیکربندی وصلۀ KOrganizer
+Comment[fa]=پیکربندی وصله KOrganizer
 Comment[fi]=KOrganizerin liitännäisen asetukset
 Comment[fr]=Configuration du module KOrganizer
 Comment[fy]=KOrganizer pluginynstellings
@@ -145,6 +145,7 @@ Comment[zh_TW]=KOrganizer外掛程式設定
 X-KDE-Keywords=korganizer,plugin,module
 X-KDE-Keywords[de]=KOrganizer,Modul,Modul
 X-KDE-Keywords[es]=korganizer, miniaplicación, módulo
+X-KDE-Keywords[fi]=korganizer,liitännäinen,moduuli
 X-KDE-Keywords[hu]=korganizer,bővítmény,modul
 X-KDE-Keywords[ia]=korganizer,plugin,modulo
 X-KDE-Keywords[kk]=korganizer,plugin,module
