--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -115,6 +115,7 @@ X-KDE-Keywords=korganizer,time
 X-KDE-Keywords[cs]=korganizer,čas
 X-KDE-Keywords[de]=KOrganizer,Zeit
 X-KDE-Keywords[es]=korganizer, hora
+X-KDE-Keywords[fi]=korganizer,aika
 X-KDE-Keywords[hu]=korganizer,idő
 X-KDE-Keywords[ia]=korganizer,tempore
 X-KDE-Keywords[kk]=korganizer,time
