--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -16,7 +16,7 @@ Name[eo]=Alarmilo por Organizilo
 Name[es]=Cliente de recordatorio de KOrganizer
 Name[et]=KOrganizeri meeldetuletuse klientprogramm
 Name[eu]=KOrganizer-en oroigarrien bezeroa
-Name[fa]=کارخواه یادآوری‌کنندۀ KOrganizer
+Name[fa]=کارخواه یادآوری‌کننده KOrganizer
 Name[fi]=KOrganizer-muistutusasiakas
 Name[fr]=Client d'alarme de KOrganizer
 Name[fy]=KOrganizer omtinkerdaemon
