--- a/korganizer_part.desktop
+++ b/korganizer_part.desktop
@@ -17,7 +17,7 @@ Comment[eo]=Kalendara kaj plana programo
 Comment[es]=Calendario y planificador
 Comment[et]=Kalendri ja ajakava haldamise rakendus
 Comment[eu]=Egutegi eta antolaketa progrmaa
-Comment[fa]=تقویم و برنامۀ زمان‌بندی
+Comment[fa]=تقویم و برنامه زمان‌بندی
 Comment[fi]=Kalenteri ja ajanhallinta
 Comment[fr]=Calendrier et agenda personnel
 Comment[fy]=Aginda- en Ã´fsprakenprogramma
