--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -16,7 +16,7 @@ Name[eo]=Datnumera kromaĵo por Kalendaro
 Name[es]=Complemento de números de fecha para calendarios
 Name[et]=Kuupäeva nummerdamise plugin kalendritele
 Name[eu]=Egutegientzako data zenbakiak
-Name[fa]=وصلۀ عدد تاریخ برای تقویمها
+Name[fa]=وصله عدد تاریخ برای تقویمها
 Name[fi]=Kalenterien päivänumeroliitännäinen
 Name[fr]=Module de numérotation des jours
 Name[fy]=Datumgetallenplugin foar aginda's
