--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -13,7 +13,7 @@ Name[el]=Πρόσθετο εικόνας της ημέρας της Wikipedia γ
 Name[en_GB]=Wikipedia Picture Of the Day Plugin for Calendars
 Name[es]=Complemento de imagen del día de la Wikipedia para calendarios
 Name[et]=Wikipedia päevapildi plugin kalendritele
-Name[fa]=عکس ویکی پدیا از وصلۀ روز برای تقویمها
+Name[fa]=عکس ویکی پدیا از وصله روز برای تقویمها
 Name[fi]=Wikipedian päivän kuva -liitännäinen
 Name[fr]=Module externe « Image du jour » de Wikipédia
 Name[gl]=Engadido para a Imaxe do Dí­a da Wikipedia nos Calendarios
