--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -72,7 +72,7 @@ Comment[en_GB]=This plugin allows you to print out events and to-dos in list for
 Comment[es]=Este complemento le permite imprimir eventos y tareas pendientes en forma de lista.
 Comment[et]=See plugin võimaldab trükkida sündmusi ja ülesandeid nimekirjana.
 Comment[eu]=Plugin honek gertaerak eta egitekoak zerrenda moduan inprimatzeko aukera ematen dizu.
-Comment[fa]=این وصله به شما اجازه می‌دهد که رویدادها و کارهای انجامی را در برگۀ فهرست چاپ کنید.
+Comment[fa]=این وصله به شما اجازه می‌دهد که رویدادها و کارهای انجامی را در برگه فهرست چاپ کنید.
 Comment[fi]=Tämä liitännäinen mahdollistaa tapahtumien ja tehtävien tulostuksen listana.
 Comment[fr]=Ce module vous permet d'imprimer les évènements et les tâches sous forme de liste
 Comment[gl]=Este engadido permi­te imprimir os eventos e as tarefas en forma de listaxe.
