--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -72,7 +72,7 @@ Comment[en_GB]=This plugin allows you to print out a list of all upcoming events
 Comment[es]=Este complemento le permite imprimir una lista de todos los próximos eventos y tareas pendientes.
 Comment[et]=See plugin võimaldab trükkida kõigi eelseisvate sündmuste ja ülesannete nimekirja.
 Comment[eu]=Plugin honek gertatuko diren gertaera eta egitekoen zerrenda bat inprimatzeko aukera ematen dizu.
-Comment[fa]=این وصله به شما اجازه می‌دهد که فهرستی از همۀ رویدادها و کارهای انجامی که بالا می‌آیند را چاپ کنید.
+Comment[fa]=این وصله به شما اجازه می‌دهد که فهرستی از همه رویدادها و کارهای انجامی که بالا می‌آیند را چاپ کنید.
 Comment[fi]=Tämä liitännäinen mahdollistaa tulevien tapahtumien ja tehtävien tulostuksen listana.
 Comment[fr]=Ce module vous permet d'imprimer la liste des prochaines évènements et des prochaines tâches.
 Comment[gl]=Este engadido permite imprimir unha listaxe de todos os eventos e tarefas vindeiros.
