--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -144,6 +144,7 @@ Comment[zh_TW]=設定 Custom Pages
 X-KDE-Keywords=korganizer, configure, settings, custom fields
 X-KDE-Keywords[de]=KOrganizer,einstellen,konfigurieren,Konfiguration,Einrichtung,Einstellungen,benutzerdefinierte Felder
 X-KDE-Keywords[es]=korganizer, configurar, preferencias, campos personalizados
+X-KDE-Keywords[fi]=korganizer, asetukset, omat kentät
 X-KDE-Keywords[hu]=korganizer, beállítás, beállítások, egyéni mezők
 X-KDE-Keywords[ia]=korganizer, configura, preferentias, campos personalisate
 X-KDE-Keywords[kk]=korganizer, configure, settings, custom fields
