--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -148,6 +148,7 @@ X-KDE-Keywords=korganizer,view
 X-KDE-Keywords[cs]=korganizer,pohled
 X-KDE-Keywords[de]=KOrganizer,Ansicht
 X-KDE-Keywords[es]=korganizer, vista
+X-KDE-Keywords[fi]=korganizer,näkymä
 X-KDE-Keywords[hu]=korganizer,nézet
 X-KDE-Keywords[ia]=korganizer,vista
 X-KDE-Keywords[kk]=korganizer,view
