SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -114,6 +114,7 @@ X-KDE-Keywords[fi]=korganizer,värit,kirjasimet,fontit
 X-KDE-Keywords[hu]=korganizer,színek,betűtípusok
 X-KDE-Keywords[ia]=korganizer,colores,fonts
 X-KDE-Keywords[kk]=korganizer,colors,fonts
+X-KDE-Keywords[nb]=korganizer,farger,skrifter
 X-KDE-Keywords[nl]=korganizer,kleuren,lettertypen
 X-KDE-Keywords[pt]=korganizer,cores,tipos de letra
 X-KDE-Keywords[pt_BR]=korganizer,cores,fontes
