--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -114,7 +114,7 @@ Comment[lt]=Konfigūruoti darbastalių skaičių ir pavadinimus
 Comment[lv]=Konfigurēt pielāgotās lapas
 Comment[mk]=Конфигурирајте ги сопствените страници
 Comment[ms]=Konfigurkan Halaman Langganan 
-Comment[nb]=Stille inn de tilpassede sidene
+Comment[nb]=Sett opp de tilpassede sidene
 Comment[nds]=Egen Sieden instellen
 Comment[ne]=अनुकूल पृष्ठ कन्फिगर गर्नुहोस्
 Comment[nl]=Hier kunt u de aangepaste pagina's instellen
@@ -148,6 +148,7 @@ X-KDE-Keywords[fi]=korganizer, asetukset, omat kentät
 X-KDE-Keywords[hu]=korganizer, beállítás, beállítások, egyéni mezők
 X-KDE-Keywords[ia]=korganizer, configura, preferentias, campos personalisate
 X-KDE-Keywords[kk]=korganizer, configure, settings, custom fields
+X-KDE-Keywords[nb]=korganizer, sett opp, innstillinger, egendefinerte felter
 X-KDE-Keywords[nl]=korganizer, instellen, instellingen, eigen velden
 X-KDE-Keywords[pt]=korganizer, configurar, configuração, campos personalizados
 X-KDE-Keywords[pt_BR]=korganizer,configurar,configurações,campos personalizados
