--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -49,7 +49,7 @@ Name[lt]=Užimtumas
 Name[lv]=Brīvs/aizņemts
 Name[mk]=Слободен/зафатен
 Name[ms]=Lapang/Sibuk
-Name[nb]=Ledig/Opptattdekrypter/verifiser alle filer i mappa
+Name[nb]=Ledig/Opptatt
 Name[nds]=Free/Bunnen
 Name[ne]=स्वतन्त्र/व्यस्त
 Name[nl]=Vrij/bezet
@@ -145,6 +145,7 @@ X-KDE-Keywords[fi]=korganizer,varaustiedot,vapaa/varattu,aikataulut
 X-KDE-Keywords[hu]=korganizer,szabadelfoglalt,ütemezés
 X-KDE-Keywords[ia]=korganizer,libereoccupate,planification
 X-KDE-Keywords[kk]=korganizer,freebusy,scheduling
+X-KDE-Keywords[nb]=korganizer,ledig/opptatt,planlegging
 X-KDE-Keywords[nl]=korganizer,vrijbezet,plannen
 X-KDE-Keywords[pt]=korganizer,livre-ocupado,agendamento
 X-KDE-Keywords[pt_BR]=korganizer,livre-ocupado,agendamento
