--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -142,6 +142,7 @@ X-KDE-Keywords[fi]=korganizer,ryhmä,aikataulut
 X-KDE-Keywords[hu]=korganizer,csoport,ütemezés
 X-KDE-Keywords[ia]=korganizer, gruppo,  planification
 X-KDE-Keywords[kk]=korganizer,group,scheduling
+X-KDE-Keywords[nb]=korganizer,gruppe,planlegging
 X-KDE-Keywords[nl]=korganizer,groep,plannen
 X-KDE-Keywords[pt]=korganizer,agendamento,escalonamento,grupo
 X-KDE-Keywords[pt_BR]=korganizer,agendamento,escalonamento,grupo
