--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -53,7 +53,7 @@ Name[lv]=Pamata
 Name[mai]=सामान्य
 Name[mk]=Општо
 Name[ms]=Umum
-Name[nb]=SGenerelt
+Name[nb]=Generelt
 Name[nds]=Allgemeen
 Name[ne]=साधारण
 Name[nl]=Algemeen
@@ -155,6 +155,7 @@ X-KDE-Keywords[fi]=korganizer,yleiset
 X-KDE-Keywords[hu]=korganizer,alap
 X-KDE-Keywords[ia]=korganizer, principal
 X-KDE-Keywords[kk]=korganizer,main
+X-KDE-Keywords[nb]=korganizer,hoved
 X-KDE-Keywords[nl]=korganizer,hoofdpagina
 X-KDE-Keywords[pt]=korganizer,principal
 X-KDE-Keywords[pt_BR]=korganizer,principal
