--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -149,6 +149,7 @@ X-KDE-Keywords[fi]=korganizer,liitännäinen,moduuli
 X-KDE-Keywords[hu]=korganizer,bővítmény,modul
 X-KDE-Keywords[ia]=korganizer,plugin,modulo
 X-KDE-Keywords[kk]=korganizer,plugin,module
+X-KDE-Keywords[nb]=korganizer,programtillegg,modul
 X-KDE-Keywords[nl]=korganizer,plug-in,module
 X-KDE-Keywords[pt]=korganizer,'plugin',módulo
 X-KDE-Keywords[pt_BR]=korganizer,plug-in,módulo
