--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -119,6 +119,7 @@ X-KDE-Keywords[fi]=korganizer,aika
 X-KDE-Keywords[hu]=korganizer,idő
 X-KDE-Keywords[ia]=korganizer,tempore
 X-KDE-Keywords[kk]=korganizer,time
+X-KDE-Keywords[nb]=korganizer,tid
 X-KDE-Keywords[nl]=korganizer,tijd
 X-KDE-Keywords[pt]=korganizer,hora
 X-KDE-Keywords[pt_BR]=korganizer,tempo
