--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -152,6 +152,7 @@ X-KDE-Keywords[fi]=korganizer,näkymä
 X-KDE-Keywords[hu]=korganizer,nézet
 X-KDE-Keywords[ia]=korganizer,vista
 X-KDE-Keywords[kk]=korganizer,view
+X-KDE-Keywords[nb]=korganizer,visning
 X-KDE-Keywords[nl]=korganizer,beeld
 X-KDE-Keywords[pt]=korganizer,ver
 X-KDE-Keywords[pt_BR]=korganizer,vsualizar
