SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -141,6 +141,7 @@ X-KDE-Keywords[es]=korganizer, grupo, agenda
 X-KDE-Keywords[fi]=korganizer,ryhmä,aikataulut
 X-KDE-Keywords[hu]=korganizer,csoport,ütemezés
 X-KDE-Keywords[ia]=korganizer, gruppo,  planification
+X-KDE-Keywords[it]=korganizer,gruppo,programmazione
 X-KDE-Keywords[kk]=korganizer,group,scheduling
 X-KDE-Keywords[nb]=korganizer,gruppe,planlegging
 X-KDE-Keywords[nl]=korganizer,groep,plannen
