--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -118,6 +118,7 @@ X-KDE-Keywords[es]=korganizer, hora
 X-KDE-Keywords[fi]=korganizer,aika
 X-KDE-Keywords[hu]=korganizer,idő
 X-KDE-Keywords[ia]=korganizer,tempore
+X-KDE-Keywords[it]=korganizer,ora
 X-KDE-Keywords[kk]=korganizer,time
 X-KDE-Keywords[nb]=korganizer,tid
 X-KDE-Keywords[nl]=korganizer,tijd
