--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -151,6 +151,7 @@ X-KDE-Keywords[es]=korganizer, vista
 X-KDE-Keywords[fi]=korganizer,näkymä
 X-KDE-Keywords[hu]=korganizer,nézet
 X-KDE-Keywords[ia]=korganizer,vista
+X-KDE-Keywords[it]=korganizer,vista
 X-KDE-Keywords[kk]=korganizer,view
 X-KDE-Keywords[nb]=korganizer,visning
 X-KDE-Keywords[nl]=korganizer,beeld
