--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -154,6 +154,7 @@ X-KDE-Keywords[es]=korganizer, principal
 X-KDE-Keywords[fi]=korganizer,yleiset
 X-KDE-Keywords[hu]=korganizer,alap
 X-KDE-Keywords[ia]=korganizer, principal
+X-KDE-Keywords[it]=korganizer,principale
 X-KDE-Keywords[kk]=korganizer,main
 X-KDE-Keywords[nb]=korganizer,hoved
 X-KDE-Keywords[nl]=korganizer,hoofdpagina
