SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -142,16 +142,29 @@ Comment[x-test]=xxConfigure the Custom Pagesxx
 Comment[zh_CN]=配置定制页
 Comment[zh_TW]=設定 Custom Pages
 X-KDE-Keywords=korganizer, configure, settings, custom fields
+X-KDE-Keywords[ca]=korganizer, configuració, arranjament, camps personalitzats
+X-KDE-Keywords[da]=korganizer, indstil, indstillinger, brugertilpassede felter
 X-KDE-Keywords[de]=KOrganizer,einstellen,konfigurieren,Konfiguration,Einrichtung,Einstellungen,benutzerdefinierte Felder
 X-KDE-Keywords[es]=korganizer, configurar, preferencias, campos personalizados
+X-KDE-Keywords[et]=korganizer, seadistamine, seadistused, omaloodud väljad
 X-KDE-Keywords[fi]=korganizer, asetukset, omat kentät
+X-KDE-Keywords[fr]=korganizer,configuration, paramètres, champs personnalisés
+X-KDE-Keywords[ga]=korganizer, cumraigh, socruithe, réimsí saincheaptha
+X-KDE-Keywords[gl]=korganizer,configurar,opcións,campos personalizados
 X-KDE-Keywords[hu]=korganizer, beállítás, beállítások, egyéni mezők
 X-KDE-Keywords[ia]=korganizer, configura, preferentias, campos personalisate
+X-KDE-Keywords[it]=korganizer, configurazione, impostazioni, campi personalizzati
 X-KDE-Keywords[kk]=korganizer, configure, settings, custom fields
+X-KDE-Keywords[km]=korganizer កំណត់​រចនាសម្ព័ន្ធ កំណត់ វាល​ផ្ទាល់ខ្លួន
 X-KDE-Keywords[nb]=korganizer, sett opp, innstillinger, egendefinerte felter
 X-KDE-Keywords[nl]=korganizer, instellen, instellingen, eigen velden
+X-KDE-Keywords[pl]=korganizer, konfiguruj, ustawienia, własne pola
 X-KDE-Keywords[pt]=korganizer, configurar, configuração, campos personalizados
 X-KDE-Keywords[pt_BR]=korganizer,configurar,configurações,campos personalizados
+X-KDE-Keywords[sr]=korganizer,configure,settings,custom fields,К‑организатор,подешавање,подесити,поставке,посебна поља
+X-KDE-Keywords[sr@ijekavian]=korganizer,configure,settings,custom fields,К‑организатор,подешавање,подесити,поставке,посебна поља
+X-KDE-Keywords[sr@ijekavianlatin]=korganizer,configure,settings,custom fields,K‑organizator,podešavanje,podesiti,postavke,posebna polja
+X-KDE-Keywords[sr@latin]=korganizer,configure,settings,custom fields,K‑organizator,podešavanje,podesiti,postavke,posebna polja
 X-KDE-Keywords[sv]=korganizer, anpassa, inställningar, egna fält
 X-KDE-Keywords[uk]=korganizer,configure,settings,custom fields,налаштування,параметри,параметр,нетиповий,поле,нетипові,поля
 X-KDE-Keywords[x-test]=xxkorganizer, configure, settings, custom fieldsxx
