--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -63,10 +63,10 @@ Name[ro]=Liber/ocupat
 Name[ru]=Занятое время
 Name[sk]=Voľný čas
 Name[sl]=Prost/zaseden
-Name[sr]=Слободно/заузето
-Name[sr@ijekavian]=Слободно/заузето
-Name[sr@ijekavianlatin]=Slobodno/zauzeto
-Name[sr@latin]=Slobodno/zauzeto
+Name[sr]=Слободно-заузето
+Name[sr@ijekavian]=Слободно-заузето
+Name[sr@ijekavianlatin]=Slobodno-zauzeto
+Name[sr@latin]=Slobodno-zauzeto
 Name[sv]=Ledig/upptagen
 Name[ta]=சுதந்திரமான/வேலையில் இருக்கும்
 Name[tg]=Озод/машғул аст
@@ -126,10 +126,10 @@ Comment[pt_BR]=Configuração de disponibilidade do KOrganizer
 Comment[ru]=Настройка свободного и занятого времени
 Comment[sk]=Nastavenie voľného času pre KOrganizer
 Comment[sl]=Nastavitev prost/zaseden za KOrganizer
-Comment[sr]=Подешавање слободног/заузетог у К‑организатору
-Comment[sr@ijekavian]=Подешавање слободног/заузетог у К‑организатору
-Comment[sr@ijekavianlatin]=Podešavanje slobodnog/zauzetog u K‑organizatoru
-Comment[sr@latin]=Podešavanje slobodnog/zauzetog u K‑organizatoru
+Comment[sr]=Подешавање слободног-заузетог у К‑организатору
+Comment[sr@ijekavian]=Подешавање слободног-заузетог у К‑организатору
+Comment[sr@ijekavianlatin]=Podešavanje slobodnog-zauzetog u K‑organizatoru
+Comment[sr@latin]=Podešavanje slobodnog-zauzetog u K‑organizatoru
 Comment[sv]=Inställning av ledig/upptagen i Korganizer
 Comment[ta]=கேஅமைப்பாளர்,சுதந்திரமான/செயலிலுள்ள கட்டமைப்பு
 Comment[tg]=Танзимоти вақти озоди органайзери KDE
@@ -139,16 +139,28 @@ Comment[x-test]=xxKOrganizer Free/Busy Configurationxx
 Comment[zh_CN]=KOrganizer 空闲/忙碌配置
 Comment[zh_TW]=KOrganizer 行程資訊設定
 X-KDE-Keywords=korganizer,freebusy,scheduling
+X-KDE-Keywords[ca]=korganizer,lliure/ocupat,planificació
+X-KDE-Keywords[da]=korganizer,freebusy,skemalægning
 X-KDE-Keywords[de]=KOrganizer,Frei/Beschäftigt,Frei/Belegt,Ablaufplanung
-X-KDE-Keywords[es]=korganizer, disponibilidad, agenda
+X-KDE-Keywords[es]=korganizer,disponibilidad,agenda
+X-KDE-Keywords[et]=korganizer,vaba,hõivatud,ajakava
 X-KDE-Keywords[fi]=korganizer,varaustiedot,vapaa/varattu,aikataulut
+X-KDE-Keywords[fr]=korganizer,planification
+X-KDE-Keywords[gl]=korganizar,ocupación,planificador
 X-KDE-Keywords[hu]=korganizer,szabadelfoglalt,ütemezés
 X-KDE-Keywords[ia]=korganizer,libereoccupate,planification
+X-KDE-Keywords[it]=korganizer,libero/occupato,programmazione
 X-KDE-Keywords[kk]=korganizer,freebusy,scheduling
+X-KDE-Keywords[km]=korganizer ទំនេរ​រវល់ ការ​កំណត់​ពេល
 X-KDE-Keywords[nb]=korganizer,ledig/opptatt,planlegging
 X-KDE-Keywords[nl]=korganizer,vrijbezet,plannen
+X-KDE-Keywords[pl]=korganizer,wolnyzajęty,planowanie
 X-KDE-Keywords[pt]=korganizer,livre-ocupado,agendamento
 X-KDE-Keywords[pt_BR]=korganizer,livre-ocupado,agendamento
+X-KDE-Keywords[sr]=korganizer,freebusy,scheduling,К‑организатор,слободно-заузето,распоређивање
+X-KDE-Keywords[sr@ijekavian]=korganizer,freebusy,scheduling,К‑организатор,слободно-заузето,распоређивање
+X-KDE-Keywords[sr@ijekavianlatin]=korganizer,freebusy,scheduling,K‑organizator,slobodno-zauzeto,raspoređivanje
+X-KDE-Keywords[sr@latin]=korganizer,freebusy,scheduling,K‑organizator,slobodno-zauzeto,raspoređivanje
 X-KDE-Keywords[sv]=korganizer,ledig-upptagen,schemaläggning
 X-KDE-Keywords[uk]=korganizer,freebusy,scheduling,вільний,зайнятий,план,планування
 X-KDE-Keywords[x-test]=xxkorganizer,freebusy,schedulingxx
