--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -80,7 +80,7 @@ Comment[af]=KOrganizer groep skedulering opstelling
 Comment[ar]=إعدادات مجموعة الجدولة لبرنامج المنظم
 Comment[bg]=Настройки на разписание за KOrganizer
 Comment[bs]=Konfiguracija Grupnog rasporeda KOrganizatora
-Comment[ca]=Configuració de la planificació de grups a KOrganizer
+Comment[ca]=Configuració de la planificació de grups del KOrganizer
 Comment[ca@valencia]=Configuració de la planificació de grups a KOrganizer
 Comment[cs]=Nastavení skupinového plánování KOrganizeru
 Comment[cy]=Ffurfweddiad Trefnlennu Grŵp KTrefnydd
@@ -136,17 +136,29 @@ Comment[x-test]=xxKOrganizer Group Scheduling Configurationxx
 Comment[zh_CN]=Korganizer 组日程安排配置
 Comment[zh_TW]=KOrganizer 群組排程設定
 X-KDE-Keywords=korganizer,group,scheduling
+X-KDE-Keywords[ca]=korganizer,grup,planificació
+X-KDE-Keywords[da]=korganizer,gruppe,skemalægning
 X-KDE-Keywords[de]=KOrganizer,Gruppe,Ablaufplanung
-X-KDE-Keywords[es]=korganizer, grupo, agenda
+X-KDE-Keywords[es]=korganizer,grupo,agenda
+X-KDE-Keywords[et]=korganizer,grupid,grupitöö,ajakavad
 X-KDE-Keywords[fi]=korganizer,ryhmä,aikataulut
+X-KDE-Keywords[fr]=korganizer,groupe,planification
+X-KDE-Keywords[ga]=korganizer,grúpa,sceidealadh
+X-KDE-Keywords[gl]=korganizer,grupo,planificador
 X-KDE-Keywords[hu]=korganizer,csoport,ütemezés
 X-KDE-Keywords[ia]=korganizer, gruppo,  planification
 X-KDE-Keywords[it]=korganizer,gruppo,programmazione
 X-KDE-Keywords[kk]=korganizer,group,scheduling
+X-KDE-Keywords[km]=korganizer ក្រុម ការ​កំណត់​ពេល
 X-KDE-Keywords[nb]=korganizer,gruppe,planlegging
 X-KDE-Keywords[nl]=korganizer,groep,plannen
+X-KDE-Keywords[pl]=korganizer,grupowanie,planowanie
 X-KDE-Keywords[pt]=korganizer,agendamento,escalonamento,grupo
 X-KDE-Keywords[pt_BR]=korganizer,agendamento,escalonamento,grupo
+X-KDE-Keywords[sr]=korganizer,group,scheduling,К‑организатор,група,груписање,распоред,распоређивање
+X-KDE-Keywords[sr@ijekavian]=korganizer,group,scheduling,К‑организатор,група,груписање,распоред,распоређивање
+X-KDE-Keywords[sr@ijekavianlatin]=korganizer,group,scheduling,K‑organizator,grupa,grupisanje,raspored,raspoređivanje
+X-KDE-Keywords[sr@latin]=korganizer,group,scheduling,K‑organizator,grupa,grupisanje,raspored,raspoređivanje
 X-KDE-Keywords[sv]=korganizer,grupp,schemaläggning
 X-KDE-Keywords[uk]=korganizer,group,scheduling,група,планування,групи
 X-KDE-Keywords[x-test]=xxkorganizer,group,schedulingxx
