--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -90,7 +90,7 @@ Comment[ar]=اعدادات برنامج المنظم الرئيسية
 Comment[bg]=Главни настройки за KOrganizer
 Comment[br]=Kefluniadur kentañ KOrganizer
 Comment[bs]=Konfiguracija Glavnog dijela KOrganizatora
-Comment[ca]=Configuració principal a KOrganizer
+Comment[ca]=Configuració principal del KOrganizer
 Comment[ca@valencia]=Configuració principal a KOrganizer
 Comment[cs]=Hlavní nastavení KOrganizeru
 Comment[cy]=Prif Ffurfweddiad KTrefnydd
@@ -148,18 +148,30 @@ Comment[x-test]=xxKOrganizer Main Configurationxx
 Comment[zh_CN]=KOrganizer 主要配置
 Comment[zh_TW]=KOrganizer 主設定
 X-KDE-Keywords=korganizer,main
+X-KDE-Keywords[ca]=korganizer,principal
 X-KDE-Keywords[cs]=korganizer,hlavní
+X-KDE-Keywords[da]=korganizer,hoved
 X-KDE-Keywords[de]=KOrganizer,allgemein
-X-KDE-Keywords[es]=korganizer, principal
+X-KDE-Keywords[es]=korganizer,principal
+X-KDE-Keywords[et]=korganizer,peamine
 X-KDE-Keywords[fi]=korganizer,yleiset
+X-KDE-Keywords[fr]=KOrganizer,principal
+X-KDE-Keywords[ga]=korganizer,príomh
+X-KDE-Keywords[gl]=KOrganizer,principal
 X-KDE-Keywords[hu]=korganizer,alap
 X-KDE-Keywords[ia]=korganizer, principal
 X-KDE-Keywords[it]=korganizer,principale
 X-KDE-Keywords[kk]=korganizer,main
+X-KDE-Keywords[km]=korganizer សំខាន់
 X-KDE-Keywords[nb]=korganizer,hoved
 X-KDE-Keywords[nl]=korganizer,hoofdpagina
+X-KDE-Keywords[pl]=korganizer,główny
 X-KDE-Keywords[pt]=korganizer,principal
 X-KDE-Keywords[pt_BR]=korganizer,principal
+X-KDE-Keywords[sr]=korganizer,main,К‑организатор,главно
+X-KDE-Keywords[sr@ijekavian]=korganizer,main,К‑организатор,главно
+X-KDE-Keywords[sr@ijekavianlatin]=korganizer,main,K‑organizator,glavno
+X-KDE-Keywords[sr@latin]=korganizer,main,K‑organizator,glavno
 X-KDE-Keywords[sv]=korganizer,huvudinställning
 X-KDE-Keywords[uk]=korganizer,main,основа,основна,головна,головний
 X-KDE-Keywords[x-test]=xxkorganizer,mainxx
