--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -143,16 +143,29 @@ Comment[x-test]=xxKOrganizer Plugin Configurationxx
 Comment[zh_CN]=KOrganizer 插件配置
 Comment[zh_TW]=KOrganizer外掛程式設定
 X-KDE-Keywords=korganizer,plugin,module
+X-KDE-Keywords[ca]=korganizer,connector,mòdul
+X-KDE-Keywords[da]=korganizer,plugin,modul
 X-KDE-Keywords[de]=KOrganizer,Modul,Modul
-X-KDE-Keywords[es]=korganizer, miniaplicación, módulo
+X-KDE-Keywords[es]=korganizer,complemento,módulo
+X-KDE-Keywords[et]=korganizer,plugin,moodul
 X-KDE-Keywords[fi]=korganizer,liitännäinen,moduuli
+X-KDE-Keywords[fr]=korganizer,module externe,module
+X-KDE-Keywords[ga]=korganizer,breiseán,modúl
+X-KDE-Keywords[gl]=korganizer,engadido,módulo
 X-KDE-Keywords[hu]=korganizer,bővítmény,modul
 X-KDE-Keywords[ia]=korganizer,plugin,modulo
+X-KDE-Keywords[it]=korganizer,estensione,modulo
 X-KDE-Keywords[kk]=korganizer,plugin,module
+X-KDE-Keywords[km]=korganizer កម្មវិធី​ជំនួយ ម៉ូឌុល
 X-KDE-Keywords[nb]=korganizer,programtillegg,modul
 X-KDE-Keywords[nl]=korganizer,plug-in,module
+X-KDE-Keywords[pl]=korganizer,wtyczka,moduł
 X-KDE-Keywords[pt]=korganizer,'plugin',módulo
 X-KDE-Keywords[pt_BR]=korganizer,plug-in,módulo
+X-KDE-Keywords[sr]=korganizer,plugin,module,К‑организатор,прикључак,модул
+X-KDE-Keywords[sr@ijekavian]=korganizer,plugin,module,К‑организатор,прикључак,модул
+X-KDE-Keywords[sr@ijekavianlatin]=korganizer,plugin,module,K‑organizator,priključak,modul
+X-KDE-Keywords[sr@latin]=korganizer,plugin,module,K‑organizator,priključak,modul
 X-KDE-Keywords[sv]=korganizer,insticksprogram,modul
 X-KDE-Keywords[uk]=korganizer,plugin,module,додаток,додатки,модуль,модулі
 X-KDE-Keywords[x-test]=xxkorganizer,plugin,modulexx
