--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -112,18 +112,30 @@ Comment[x-test]=xxKOrganizer Time and Date Configurationxx
 Comment[zh_CN]=KOrganizer 时间和日期配置
 Comment[zh_TW]=KOrganizer 時間與日期設定
 X-KDE-Keywords=korganizer,time
+X-KDE-Keywords[ca]=korganizer,hora
 X-KDE-Keywords[cs]=korganizer,čas
+X-KDE-Keywords[da]=korganizer,tid
 X-KDE-Keywords[de]=KOrganizer,Zeit
-X-KDE-Keywords[es]=korganizer, hora
+X-KDE-Keywords[es]=korganizer,hora
+X-KDE-Keywords[et]=korganizer,aeg
 X-KDE-Keywords[fi]=korganizer,aika
+X-KDE-Keywords[fr]=KOrganizer,temps
+X-KDE-Keywords[ga]=korganizer,am
+X-KDE-Keywords[gl]=kOrganizer,tempo
 X-KDE-Keywords[hu]=korganizer,idő
 X-KDE-Keywords[ia]=korganizer,tempore
 X-KDE-Keywords[it]=korganizer,ora
 X-KDE-Keywords[kk]=korganizer,time
+X-KDE-Keywords[km]=korganizer ពេលវេលា
 X-KDE-Keywords[nb]=korganizer,tid
 X-KDE-Keywords[nl]=korganizer,tijd
+X-KDE-Keywords[pl]=korganizer,czas
 X-KDE-Keywords[pt]=korganizer,hora
 X-KDE-Keywords[pt_BR]=korganizer,tempo
+X-KDE-Keywords[sr]=korganizer,time,К‑организатор,време
+X-KDE-Keywords[sr@ijekavian]=korganizer,time,К‑организатор,време
+X-KDE-Keywords[sr@ijekavianlatin]=korganizer,time,K‑organizator,vreme
+X-KDE-Keywords[sr@latin]=korganizer,time,K‑organizator,vreme
 X-KDE-Keywords[sv]=korganizer,tid
 X-KDE-Keywords[uk]=korganizer,time,час
 X-KDE-Keywords[x-test]=xxkorganizer,timexx
