--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -10,6 +10,7 @@ Name[es]=Demonio de recordatorio
 Name[et]=Meeldetuletuste deemon
 Name[fi]=Muistutuspalvelu
 Name[fr]=Démon d'alarme
+Name[ga]=Deamhan Meabhrúchán
 Name[gl]=Daemon do servizo de lembranzas
 Name[hr]=Podsjetnik
 Name[hu]=Emlékeztető démon
