--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -108,16 +108,29 @@ Comment[x-test]=xxKOrganizer Colors and Fonts Configurationxx
 Comment[zh_CN]=KOrganizer 颜色和字体配置
 Comment[zh_TW]=KOrganizer 顏色與字型設定
 X-KDE-Keywords=korganizer,colors,fonts
+X-KDE-Keywords[ca]=korganizer,colors,tipus de lletra
+X-KDE-Keywords[da]=korganizer,farver,skrifttyper
 X-KDE-Keywords[de]=KOrganizer,Farben,Schriftarten
-X-KDE-Keywords[es]=korganizer, colores, tipos de letra
+X-KDE-Keywords[es]=korganizer,colores,tipos de letra
+X-KDE-Keywords[et]=korganizer,värvid,fondid
 X-KDE-Keywords[fi]=korganizer,värit,kirjasimet,fontit
+X-KDE-Keywords[fr]=korganizer,couleurs,polices
+X-KDE-Keywords[ga]=korganizer,dathanna,clófhoirne,clónna
+X-KDE-Keywords[gl]=korganizer,cores,tipos de letra
 X-KDE-Keywords[hu]=korganizer,színek,betűtípusok
 X-KDE-Keywords[ia]=korganizer,colores,fonts
+X-KDE-Keywords[it]=korganizer,colori,caratteri
 X-KDE-Keywords[kk]=korganizer,colors,fonts
+X-KDE-Keywords[km]=korganizer ពណ៌ ពុម្ព​អក្សរ
 X-KDE-Keywords[nb]=korganizer,farger,skrifter
 X-KDE-Keywords[nl]=korganizer,kleuren,lettertypen
+X-KDE-Keywords[pl]=korganizer,kolory,czcionki
 X-KDE-Keywords[pt]=korganizer,cores,tipos de letra
 X-KDE-Keywords[pt_BR]=korganizer,cores,fontes
+X-KDE-Keywords[sr]=korganizer,colors,fonts,К‑организатор,боје,фонтови
+X-KDE-Keywords[sr@ijekavian]=korganizer,colors,fonts,К‑организатор,боје,фонтови
+X-KDE-Keywords[sr@ijekavianlatin]=korganizer,colors,fonts,K‑organizator,boje,fontovi
+X-KDE-Keywords[sr@latin]=korganizer,colors,fonts,K‑organizator,boje,fontovi
 X-KDE-Keywords[sv]=korganizer,färger,teckensnitt
 X-KDE-Keywords[uk]=korganizer,colors,fonts,кольори,колір,шрифт,шрифти
 X-KDE-Keywords[x-test]=xxkorganizer,colors,fontsxx
