--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -145,18 +145,30 @@ Comment[x-test]=xxKOrganizer View Configurationxx
 Comment[zh_CN]=KOrganizer 视图配置
 Comment[zh_TW]=KOrganizer 檢視設定
 X-KDE-Keywords=korganizer,view
+X-KDE-Keywords[ca]=korganizer,vista
 X-KDE-Keywords[cs]=korganizer,pohled
+X-KDE-Keywords[da]=korganizer,vis
 X-KDE-Keywords[de]=KOrganizer,Ansicht
-X-KDE-Keywords[es]=korganizer, vista
+X-KDE-Keywords[es]=korganizer,vista
+X-KDE-Keywords[et]=korganizer,vaade
 X-KDE-Keywords[fi]=korganizer,näkymä
+X-KDE-Keywords[fr]=KOrganizer,vue
+X-KDE-Keywords[ga]=korganizer,amharc
+X-KDE-Keywords[gl]=kOrganizer,vista
 X-KDE-Keywords[hu]=korganizer,nézet
 X-KDE-Keywords[ia]=korganizer,vista
 X-KDE-Keywords[it]=korganizer,vista
 X-KDE-Keywords[kk]=korganizer,view
+X-KDE-Keywords[km]=korganizer ទិដ្ឋភាព
 X-KDE-Keywords[nb]=korganizer,visning
 X-KDE-Keywords[nl]=korganizer,beeld
+X-KDE-Keywords[pl]=korganizer,widok
 X-KDE-Keywords[pt]=korganizer,ver
 X-KDE-Keywords[pt_BR]=korganizer,vsualizar
+X-KDE-Keywords[sr]=korganizer,view,К‑организатор,приказ
+X-KDE-Keywords[sr@ijekavian]=korganizer,view,К‑организатор,приказ
+X-KDE-Keywords[sr@ijekavianlatin]=korganizer,view,K‑organizator,prikaz
+X-KDE-Keywords[sr@latin]=korganizer,view,K‑organizator,prikaz
 X-KDE-Keywords[sv]=korganizer,vy
 X-KDE-Keywords[uk]=korganizer,view,перегляд
 X-KDE-Keywords[x-test]=xxkorganizer,viewxx
