--- a/korganizer.desktop
+++ b/korganizer.desktop
@@ -60,6 +60,7 @@ Comment[sv]=Kalender- och schemaläggningsprogram
 Comment[ta]=நாள்காட்டி மற்றும் திட்ட நிரல்
 Comment[tg]=Тақвимот ва ҷадвали шахсӣ
 Comment[tr]=Takvim ve Zamanlama Programı
+Comment[ug]=يىلنامە ۋە كۈنتەرتىپ پروگراممىسى
 Comment[uk]=Програма календаря та розкладу
 Comment[uz]=Kalendar va rejalashtirish dasturi
 Comment[uz@cyrillic]=Календар ва режалаштириш дастури
