SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -150,6 +150,7 @@ X-KDE-Keywords[ia]=korganizer, gruppo,  planification
 X-KDE-Keywords[it]=korganizer,gruppo,programmazione
 X-KDE-Keywords[kk]=korganizer,group,scheduling
 X-KDE-Keywords[km]=korganizer ក្រុម ការ​កំណត់​ពេល
+X-KDE-Keywords[lt]=korganizer,grupė,tvarkaraščių sudarymas
 X-KDE-Keywords[nb]=korganizer,gruppe,planlegging
 X-KDE-Keywords[nl]=korganizer,groep,plannen
 X-KDE-Keywords[pl]=korganizer,grupowanie,planowanie
