--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -163,6 +163,7 @@ X-KDE-Keywords[ia]=korganizer, principal
 X-KDE-Keywords[it]=korganizer,principale
 X-KDE-Keywords[kk]=korganizer,main
 X-KDE-Keywords[km]=korganizer សំខាន់
+X-KDE-Keywords[lt]=korganizer,pagrindinis
 X-KDE-Keywords[nb]=korganizer,hoved
 X-KDE-Keywords[nl]=korganizer,hoofdpagina
 X-KDE-Keywords[pl]=korganizer,główny
