--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -160,6 +160,7 @@ X-KDE-Keywords[ia]=korganizer,vista
 X-KDE-Keywords[it]=korganizer,vista
 X-KDE-Keywords[kk]=korganizer,view
 X-KDE-Keywords[km]=korganizer ទិដ្ឋភាព
+X-KDE-Keywords[lt]=korganizer,rodinys
 X-KDE-Keywords[nb]=korganizer,visning
 X-KDE-Keywords[nl]=korganizer,beeld
 X-KDE-Keywords[pl]=korganizer,widok
