--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -127,6 +127,7 @@ X-KDE-Keywords[ia]=korganizer,tempore
 X-KDE-Keywords[it]=korganizer,ora
 X-KDE-Keywords[kk]=korganizer,time
 X-KDE-Keywords[km]=korganizer ពេលវេលា
+X-KDE-Keywords[lt]=korganizer,laikas
 X-KDE-Keywords[nb]=korganizer,tid
 X-KDE-Keywords[nl]=korganizer,tijd
 X-KDE-Keywords[pl]=korganizer,czas
